# MCPokerEquityEngine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/modular_evaluators_20260124/: index.md  metadata.json  plan.md  spec.md
deployment/ec2/: README.md  nginx.conf  requirements.txt  setup.sh
deployment/ec2/systemd/: poker-engine-cpp.service  poker-engine.service
docs/: api-contract.md  deployment.md  telemetry-shared-memory.md
src/cpp/poker_engine/: CMakeLists.txt  main.cpp
src/cpp/poker_engine/api/: job_manager.cpp  job_manager.h  json_utils.cpp  json_utils.h  server.cpp  server.h
src/cpp/poker_engine/core/: card.cpp  card.h  deck.cpp  deck.h
src/cpp/poker_engine/engine/: equity_engine.cpp  equity_engine.h  equity_result.h  shared_memory_types.h  shared_memory_writer.cpp  shared_memory_writer.h  simd_helper.h
src/cpp/poker_engine/evaluators/: cactus_kev_evaluator.cpp  cactus_kev_evaluator.h  hand_types.h  naive_evaluator.cpp  naive_evaluator.h  omp_eval.cpp  omp_eval.h  ph_evaluator.cpp  ph_evaluator.h  ph_evaluator_tables.cpp  ph_evaluator_tables.h  two_plus_two_evaluator.cpp  two_plus_two_evaluator.h
src/cpp/poker_engine/tests/: evaluator_conformance.h  test_cactus_kev.cpp  test_evaluator_conformance.cpp  test_evaluator_consistency.cpp  test_hand_types.cpp  test_json_utils.cpp  test_multithreading.cpp  test_omp_eval.cpp  test_ph_evaluator.cpp  test_simd_helper.cpp  test_two_plus_two.cpp
src/cpp/telemetry_collector/: CMakeLists.txt  main.cpp  metrics_collector.cpp  metrics_collector.h  shared_memory.cpp  shared_memory.h  telemetry.fbs  telemetry_generated.h  websocket_client.cpp  websocket_client.h  websocket_server.cpp  websocket_server.h
src/python/api/: executor.py  job_manager.py  models.py  server.py  websocket.py
src/python/engine/: __init__.py  engine.py  factory.py
src/python/engine/strategies/: __init__.py  base.py
src/python/engine/strategies/naive/: __init__.py  evaluator.py
src/python/engine/strategies/senzee/: __init__.py  card.py  evaluator.py  lookup.py
src/python/models/: __init__.py  card.py  job.py
src/python/utils/: metrics.py  shared_memory.py
src/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/web/src/: App.tsx  index.css  vite-env.d.ts
src/web/src/api/: client.ts  contract.ts  mock.ts  telemetry.ts  telemetry_generated.ts
src/web/src/api/telemetry/: hand-equity.ts  telemetry-packet.ts  telemetry.ts
src/web/src/api/telemetry/telemetry/: hand-equity.ts
src/web/src/components/: AlgorithmSelector.tsx  CardPicker.tsx  EquityCategoryChart.tsx  HandEvolutionSankey.tsx  Heatmap.tsx  JobStatus.tsx  Metrics.tsx  ModeSelector.tsx  OptimizationSelector.tsx  SimulationCountSelector.tsx  ThemeToggle.tsx  WinMethodChart.tsx
src/web/src/hooks/: useJob.ts  useWebSocket.ts
src/web/src/types/: index.ts
src/web/src/utils/: telemetryParser.ts
tests/python/: test_engine.py  test_models.py  test_strategies.py
tools/: generate_ph_tables.cpp  generate_table  generate_table.cpp  verify_websocket_binary.sh
web/src/api/: telemetry.ts
web/src/api/telemetry/: evolution-path.ts  hand-equity.ts
web/src/api/telemetry/telemetry/: hand-equity.ts  telemetry-packet.ts
