[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-equity-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "psutil>=5.9.6",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[tool.setuptools]
packages = ["src.python", "src.python.models", "src.python.engine", "src.python.engine.strategies", "src.python.utils"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
